[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "tcr-immune-powerlaw"
version = "0.1.0"
description = "Power-law analysis pipeline for TCR clonotypes and immune dynamics"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Elkin Navarro", email = "elkin.navarro@unisimon.edu.co"},
]
keywords = ["immunology", "TCR", "power-law", "heavy-tailed", "systems-immunology"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "scipy>=1.7.0",
    "scikit-learn>=1.0.0",
    "matplotlib>=3.4.0",
    "seaborn>=0.11.0",
    "powerlaw>=1.4.6",
]

[project.optional-dependencies]
dev = ["pytest>=6.0", "pytest-cov>=2.0", "sphinx>=4.0", "black>=21.0", "flake8>=3.9"]
docs = ["sphinx>=4.0", "sphinx-rtd-theme>=1.0"]

[project.urls]
Homepage = "https://github.com/elkinnavarro-glitch/tcr-immune-powerlaw"
Documentation = "https://github.com/elkinnavarro-glitch/tcr-immune-powerlaw/wiki"
Repository = "https://github.com/elkinnavarro-glitch/tcr-immune-powerlaw.git"
Issues = "https://github.com/elkinnavarro-glitch/tcr-immune-powerlaw/issues"

[tool.setuptools]
packages = ["immunepack"]
